# opencode-engineering-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: validate.yml
commands/: architecture.md  choose-skills.md  compress-context.md  context-audit.md  debug.md  discover.md  fix.md  handoff-summary.md  implement.md  install-opencode.sh  plan.md  refactor.md  review.md  safe-apply.md  smart-fix.md  smart-review.md
docs/: advanced-roadmap.md  opencode-custom-tools-design.md  skill-orchestration-design.md  skill-routing-matrix.md  token-saving-guide.md
opencode-tools/: context_compressor.ts  diff_summarizer.ts  prompt_budget.ts  repo_map.ts
packs/: ai-engineer-pack.md  backend-pack.md  frontend-pack.md  fullstack-pack.md  production-pack.md  review-pack.md
scripts/: install-opencode.sh  install-pack.sh  uninstall-opencode.sh  validate-skills.sh
skills/ai-cost-optimization/: SKILL.md
skills/ai-evaluation/: SKILL.md
skills/ai-system-architecture/: SKILL.md
skills/code-review/: SKILL.md
skills/context-engineering/: SKILL.md
skills/fastapi-backend/: SKILL.md
skills/fine-tuning/: SKILL.md
skills/llm-app-security/: SKILL.md
skills/llm-observability/: SKILL.md
skills/mcp-development/: SKILL.md
tests/: test_context_compressor.py  test_diff_summarizer.py  test_install_opencode.py  test_prompt_budget.py  test_repo_map.py  test_validate_skills_sh.py  validate_skills.py
tools/: context_compressor.py  diff_summarizer.py  prompt_budget.py  repo_map.py
(+17 files in other folders)
